# br-lsp

./: .gitattributes  .gitignore  .vscodeignore  CLAUDE.md  Cargo.toml  README.md  language-configuration.json  package-lock.json  package.json
Lexi/: lexi.br  lexionly.brs  linenum.brs  wbconfig.sys  wbterm.out
client/: package.json  pnpm-lock.yaml  tsconfig.test.json
client/src/: compile.ts  debug.ts  decompile.ts  extension.ts  info.ts  inspector.ts  lexi.ts  line-map.ts  line-numbers.ts  next-prev.ts  proc-search.ts  run.ts
client/src/test/: index.ts  runTest.ts
client/src/test/e2e/: code-actions.test.ts  completions.test.ts  definition.test.ts  diagnostics.test.ts  helper.ts  references.test.ts  rename.test.ts
client/src/test/unit/: compile.test.ts  debug.test.ts  decompile.test.ts  line-numbers.test.ts  run.test.ts
client/testFixture/: diagnostics.brs  functions.brs  library.brs  simple.brs
schemas/: br-debug.json
snippets/: fileio.json  lexi.json  loops.json  statements.json
src/: backend.rs  builtins.json  builtins.rs  check.rs  code_action.rs  completions.rs  definition.rs  diagnostics.rs  extract.rs  layout.rs  main.rs  parser.rs  references.rs  rename.rs  semantic_tokens.rs  symbols.rs  workspace.rs
syntaxes/: br.tmLanguage.json
