[package]
name = "br-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
ropey = "1.5.0"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.14"
anyhow = "1.0.93"
thiserror = "2.0.3"
tree-sitter = "0.25"
tree-sitter-br = { path = "../tree-sitter-br" }
walkdir = "2"
encoding_rs = "0.8"
rayon = "1"

[dev-dependencies]
tempfile = "3"
